--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
@@ -33,39 +34,41 @@
     <!-- ionci material -->
     <link href='/lib/robotodraft/robotodraft.css' rel='stylesheet' type='text/css'>
     <link href="lib/ionic-material/ionic.material.min.css" rel="stylesheet">
-    <link href="lib/ion-floating-menu/ion-floating-menu.css" rel="stylesheet" type="text/css"/>
+    <link href="lib/ion-floating-menu/ion-floating-menu.css" rel="stylesheet" type="text/css" />
     <script src="lib/ionic-material/ionic.material.min.js"></script>
 
 
 
-     <!--firebase -->
+    <!--firebase -->
     <script src="lib/firebase/firebase.js"></script>
-    <script src="lib/firebase/angularfire.min.js"></script>   
+    <script src="lib/firebase/angularfire.min.js"></script>
     <script src="js/rtdb-setup.js"></script>
 
     <script src="lib/ion-floating-menu/ion-floating-menu.js" type="text/javascript"></script>
     <script src="lib/ionic-toast/ionic-toast.bundle.min.js"></script>
-   
-   <!--loading bar-->
-   <link rel='stylesheet' href='lib/loading-bar/loading-bar.css' type='text/css' media='all' />
-   <script type='text/javascript' src='lib/loading-bar/loading-bar.js'></script>
 
-   <!--socket -->
+    <!--loading bar-->
+    <link rel='stylesheet' href='lib/loading-bar/loading-bar.css' type='text/css' media='all' />
+    <script type='text/javascript' src='lib/loading-bar/loading-bar.js'></script>
+
+    <!--socket
    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
-  
+  -->
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/socketService.js"></script>
+    <!--   <script src="js/socketService.js"></script>
+   -->
     <script src="js/controllers.js"></script>
     <script src="js/channelController.js"></script>
     <script src="js/sendAndRequest.js"></script>
     <script src="js/messageController.js"></script>
     <script src="js/broadcast.js"></script>
     <script src="js/loginNlogout.js"></script>
-  </head>
+</head>
 
-  <body ng-app="cetApp">
+<body ng-app="cetApp">
     <ion-nav-view></ion-nav-view>
-  </body>
+</body>
+
 </html>
